--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     </div>
                 </div>
             <div class="picture-container">
-                <img class="professional-picture" src="/images/Professional Picture.jpg" alt="Professional Picture">
+                <img class="professional-picture" src="/Professional Picture.jpg" alt="Professional Picture">
             </div>
         </div>
         </div>
@@ -141,7 +141,7 @@
             <div class="projects-container">
                 <div class="project-card project1">
                     <a href="/project1.html" target="_blank">Click Here</a>
-                    <img src="/images/Project1-picture.PNG" alt="Morning Coffee">
+                    <img src="/Project1-picture.PNG" alt="Morning Coffee">
                     <h3>Morning Coffee (SaaS)</h3>
                     <p>A Software as a Service website <br> mock up, that is mobile / tablet <br> responsive. 
                     Used mostly HTML5, <br> and CSS3 principles for this project.</p>
@@ -149,7 +149,7 @@
 
                 <div class="project-card project2">
                     <a href="/project2.html" target="_blank">Click Here</a>
-                    <img src="/images/Project2-picture.png" alt="Development Path">
+                    <img src="/Project2-picture.png" alt="Development Path">
                     <h3>Development Path</h3>
                     <p>A Technology Blogging Website, <br> that is mobile responsive, allowing users 
                         <br> to get a real perspective inside the tech <br> industry, specifically in Software Development.</p>
@@ -166,7 +166,7 @@
             <div class="projects-container">
                 <div class="project-card project3">
                     <a href="/project3.html" target="_blank">Click Here</a>
-                    <img src="/images/Project3-picture.png" alt="LA Fitness Evaluation Form">
+                    <img src="/Project3-picture.png" alt="LA Fitness Evaluation Form">
                     <h3>LA Fitness Evaluation</h3>
                     <p>A Fitness Evaluation Form, used in my <br> previous job as an Assistant Personal Training Director. <br>
                         Created with HTML, CSS, and using HoneyPot <br> to receive the evaluation in my personal email.</p>
@@ -174,7 +174,7 @@
 
                 <div class="project-card project4">
                     <a href="/project4.html" target="_blank">Click Here</a>
-                    <img src="/images/Project4-picture.png" alt="Development Path">
+                    <img src="/Project4-picture.png" alt="Development Path">
                     <h3>Orioles Blog Website</h3>
                     <p>Mock up Orioles Blog Website, for a client prospect, <br> made using HTML, CSS ( w/ Parallax Effect).</p>
                 </div>
