--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     </div>
                 </div>
             <div class="picture-container">
-                <img class="professional-picture" src="/Professional Picture.jpg" alt="Professional Picture">
+                <img class="professional-picture" src="Professional Picture.jpg" alt="Professional Picture">
             </div>
         </div>
         </div>
@@ -123,7 +123,7 @@
                     </div>
 
                     <div class="coding-picture">
-                        <img src="/BlackAJDevLogo.png" alt="coding-picture">
+                        <img src="BlackAJDevLogo.png" alt="coding-picture">
                     </div>
                 </div>
             </div>
@@ -140,16 +140,16 @@
             </div>
             <div class="projects-container">
                 <div class="project-card project1">
-                    <a href="/project1.html" target="_blank">Click Here</a>
-                    <img src="/Project1-picture.PNG" alt="Morning Coffee">
+                    <a href="project1.html" target="_blank">Click Here</a>
+                    <img src="Project1-picture.PNG" alt="Morning Coffee">
                     <h3>Morning Coffee (SaaS)</h3>
                     <p>A Software as a Service website <br> mock up, that is mobile / tablet <br> responsive. 
                     Used mostly HTML5, <br> and CSS3 principles for this project.</p>
                 </div>
 
                 <div class="project-card project2">
-                    <a href="/project2.html" target="_blank">Click Here</a>
-                    <img src="/Project2-picture.png" alt="Development Path">
+                    <a href="project2.html" target="_blank">Click Here</a>
+                    <img src="Project2-picture.png" alt="Development Path">
                     <h3>Development Path</h3>
                     <p>A Technology Blogging Website, <br> that is mobile responsive, allowing users 
                         <br> to get a real perspective inside the tech <br> industry, specifically in Software Development.</p>
@@ -165,18 +165,109 @@
             </div>
             <div class="projects-container">
                 <div class="project-card project3">
-                    <a href="/project3.html" target="_blank">Click Here</a>
-                    <img src="/Project3-picture.png" alt="LA Fitness Evaluation Form">
+                    <a href="project3.html" target="_blank">Click Here</a>
+                    <img src="Project3-picture.png" alt="LA Fitness Evaluation Form">
                     <h3>LA Fitness Evaluation</h3>
                     <p>A Fitness Evaluation Form, used in my <br> previous job as an Assistant Personal Training Director. <br>
                         Created with HTML, CSS, and using HoneyPot <br> to receive the evaluation in my personal email.</p>
                 </div>
 
                 <div class="project-card project4">
-                    <a href="/project4.html" target="_blank">Click Here</a>
-                    <img src="/Project4-picture.png" alt="Development Path">
+                    <a href="project4.html" target="_blank">Click Here</a>
+                    <img src="Project4-picture.png" alt="Development Path">
                     <h3>Orioles Blog Website</h3>
                     <p>Mock up Orioles Blog Website, for a client prospect, <br> made using HTML, CSS ( w/ Parallax Effect).</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- UI Designs Section -->
+
+    <section>
+        <div class="ui-section">
+            <div class="ui-title">
+                <h2>UI Designs</h2>
+                <p>(using Figma)</p>
+            </div>
+            <div class="ui-container">
+                <div class="ui-design1">
+                    <a href="uidesign1.html" target="_blank">Click Here</a>
+                    <img src="CallofDutyUI_ModernWarfare.png" alt="Call of Duty Menu Display">
+                    <h3>Call of Duty: Modern Warfare Menu Display</h3>
+                    <p>Call of Duty: Modern Warfare UI Menu Design made <br> from inspiration of the game itself.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div class="ui-section">
+            <div class="ui-title">
+                <h2>UI Designs</h2>
+                <p>(using Figma)</p>
+                <h3>Call of Duty NEW Feature</h3>
+                <h4>Entire Design within the next 2 pages</h4>
+            </div>
+            <div class="ui-container2">
+                <div class="ui-design2">
+                    <a href="uidesign2.html" target="_blank">Click Here</a>
+                    <img src="Wireframe_ModernWarfare_CompareWeaponsUI.png" alt="WireFrame Compare Weapons">
+                    <h3>WireFrame for Comparing Weapons</h3>
+                    <p>Concept to help compare weapons inside of the <br> gunsmith for Call of Duty: Modern Warfare</p>
+                </div>
+                <div class="ui-design2">
+                    <a href="uidesign3.html" target="_blank">Click Here</a>
+                    <img src="Design_ModernWarfare_CompareWeaponsUI.png" alt="Design Compare Weapons">
+                    <h3>Design for Comparing Weapons</h3>
+                    <p>Completed Design for comparing weapons inside of the <br> gunsmith for Call of Duty: Modern Warfare</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div class="ui-section">
+            <div class="ui-title">
+                <h2>UI Designs</h2>
+                <p>(using Figma)</p>
+            </div>
+            <div class="ui-container2">
+                <div class="ui-design2">
+                    <a href="uidesign4.html" target="_blank">Click Here</a>
+                    <img src="Wireframe_ModernWarfare_IndividualWeaponUI.png" alt="WireFrame Individual Weapon">
+                    <h3>WireFrame for Individual Weapon</h3>
+                    <p>Concept to make the statistics for an Individual Weapon <br> inside of the gunsmith.</p>
+                </div>
+                <div class="ui-design2">
+                    <a href="uidesign5.html" target="_blank">Click Here</a>
+                    <img src="Design_ModernWarfare_IndividualWeaponUI.png" alt="Design Individual Weapon">
+                    <h3>Design for Individual Weapon</h3>
+                    <p>Completed Design to make the statistics for an <br> Individual Weapon inside of the gunsmith.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div class="ui-section">
+            <div class="ui-title">
+                <h2>UI Designs</h2>
+                <p>(using Figma)</p>
+            </div>
+            <div class="ui-container2">
+                <div class="ui-design2">
+                    <a href="uidesign6.html" target="_blank">Click Here</a>
+                    <img src="Wireframe_ModernWarfare_FinalCompareUI.png" alt="WireFrame Final Compare">
+                    <h3>WireFrame for Final Comparison of Weapons</h3>
+                    <p>Concept to compare up to 3 weapons inside of the gunsmith.</p>
+                </div>
+                <div class="ui-design2">
+                    <a href="uidesign7.html" target="_blank">Click Here</a>
+                    <img src="Design_ModernWarfare_FinalCompareUI.png" alt="Design Final Compare">
+                    <h3>Design for Final Comparison of Weapons</h3>
+                    <p>Completed Design to compare up to 3 weapons inside <br> of the gunsmith.</p>
                 </div>
             </div>
         </div>
@@ -217,7 +308,7 @@
             </div>
 
             <div class="coding-picture2">
-                <img src="/BlackAJDevLogo.png" alt="coding-picture">
+                <img src="BlackAJDevLogo.png" alt="coding-picture">
             </div>
         </div>
     </section>
