--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                 <h2>Contact Me ()</h2>
             </div>
             <div class="contact-container">
-                <form class="contact-form" action="https://formsubmit.co/alanjohnson.dev@gmail.com" method="POST">
+                <form class="contact-form" action="https://formsubmit.co/0d31753091d79827306b26052e8b8a91" method="POST">
                     <label for="firstName">First Name:</label><br>
                     <input type="text" id="firstName" name="firstName" required><br>
 
@@ -303,7 +303,9 @@
                     <h4>Any Comments or Questions?</h4>
                     <p>Please leave them below...</p>
                     <textarea name="questions" id="questions" cols="32" rows="5" placeholder="Type text here..."></textarea>
-
+                    <div class="button-container">
+                        <input class="submit" type="submit" value="submit">
+                    </div>
                 </form>
             </div>
 
