--- a/index.html
+++ b/index.html
@@ -283,6 +283,15 @@
             </div>
             <div class="contact-container">
                 <form class="contact-form" action="https://formsubmit.co/0d31753091d79827306b26052e8b8a91" method="POST">
+
+                    <!-- Honeypot -->
+
+                    <input type="text" name="_honey" style="display: none;">
+
+                    <!-- Disable Captcha -->
+
+                    <input type="hidden" name="_captcha" value="false">
+
                     <label for="firstName">First Name:</label><br>
                     <input type="text" id="firstName" name="firstName" required><br>
 
