--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                 <h2>Contact Me ()</h2>
             </div>
             <div class="contact-container">
-                <form class="contact-form" action="https://formsubmit.co/0d31753091d79827306b26052e8b8a91" method="POST">
+                <form class="contact-form" action="https://formsubmit.co/alanjohnson.dev@gmail.com" method="POST">
 
                     <!-- Honeypot -->
 
