--- a/index.html
+++ b/index.html
@@ -292,6 +292,12 @@
 
                     <input type="hidden" name="_captcha" value="false">
 
+                    <!-- Success Message Link -->
+
+                    <input type="hidden" name="_next" value="https://alanjohnsondev.github.io/Portfolio/success.html">
+
+                    <!-- Contact Form -->
+
                     <label for="firstName">First Name:</label><br>
                     <input type="text" id="firstName" name="firstName" required><br>
 
