--- a/success.html
+++ b/success.html
@@ -21,7 +21,10 @@
     <section>
         <div class="project-container">
             <h2>Contact Me ()</h2>
-            <p>Success! We will get back with you very shortly.  Thank you!</p>
+            <p class="success-text">Success! We will get back with you very shortly. <br> Thank you!</p>
+        </div>
+        <div class="success-logo">
+            <img src="BlackAJDevLogo.png" alt="Portfolio Logo">
         </div>
     </section>
 
