Fixed All Layouts, Created new design
Changed color schemes, created new layouts and designed success page.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                             on websites and applications.</p>
                     </div>
                     <div class="title-buttons">
-                        <button class="button-cv"><a href="https://1drv.ms/b/s!AloVfcSJCWsDqD3FCqsUP-F3gftC?e=be5sg0" target="_blank">Download CV</a></button>
+                        <button class="button-cv"><a href="https://1drv.ms/b/s!AloVfcSJCWsDxzzmuRUnU4OCfHTg?e=ZvXvCd" target="_blank">Download CV</a></button>
                         <button class="button-contact"><a href="#Contact-me">Contact Me</a></button>
                         <a href="https://www.linkedin.com/in/alan-johnson-aa74b915b/" target="_blank"><i class="fa fa-linkedin"></i></a>
                         <a href="https://github.com/alanjohnsonDev" target="_blank"><i class="fa fa-github"></i></a>
@@ -70,9 +70,8 @@
                 <p class="about-paragraph">
                     I have worked as a Junior Software Developer at a government contracting company <br>
                     coding automation tasks using <strong>RPA</strong> (Robotic Process Automation).
-                    Currently, <br> I am working as a Software Developer on a <strong>website module</strong> 
-                    for the <br> government that extends/sells parts to squadrons based <br> on aircraft 
-                    supplies for the navy. 
+                    Currently, <br> my company needed a new website overhaul, so I helped solely <br> custom code
+                    their website, making it more User Friendly <br> and mobile responsive.
                 </p> <br>
                 <p class="about-paragraph">
                     I am in the process of a <strong>Full-Stack Developer Boot Camp</strong> that has <br> helped me obtain
@@ -104,26 +103,16 @@
                         <div class="skills3">
                             <ul>
                                 <li>SQL</li>
-                                <li>C#</li>
+                                <li>GitLab</li>
                                 <li>GitHub</li>
-                                <li>APIs</li>
+                                <li>Jira</li>
                             </ul>
                         </div>
-        
-                        
 
-                        <div class="skills4">
-                            <ul>
-                                <li>RPA Dev</li>
-                                <li>VB Script</li>
-                                <li>Scripting</li>
-                                <li>MongoDB</li>
-                            </ul>
-                        </div>
                     </div>
 
                     <div class="coding-picture">
-                        <img src="BlackAJDevLogo.png" alt="coding-picture">
+                        <img src="Black-Red-AJDevLogo.png" alt="coding-picture">
                     </div>
                 </div>
             </div>
@@ -307,17 +296,8 @@
                     <label for="email">Email:</label><br>
                     <input type="email" id="email" name="email" required><br><br>
 
-                    <h4>Reason for Contact:</h4>
-                    <input type="radio" id="opportunity" value="opportunity" name="radio">
-                    <p class="radio-reasons">Job Opportunity</p><br>
-                    <input type="radio" id="collaboration" value="collaboration" name="radio">
-                    <p class="radio-reasons">Collaboration</p><br>
-                    <input type="radio" id="work" value="work" name="radio">
-                    <p class="radio-reasons">Interested in my Work</p><br><br>
-
                     <h4>Any Comments or Questions?</h4>
-                    <p>Please leave them below...</p>
-                    <textarea name="questions" id="questions" cols="32" rows="5" placeholder="Type text here..."></textarea>
+                    <textarea name="questions" id="questions" cols="26" rows="5" placeholder="Type text here..."></textarea>
                     <div class="button-container">
                         <input class="submit" type="submit" value="submit">
                     </div>
@@ -325,7 +305,7 @@
             </div>
 
             <div class="coding-picture2">
-                <img src="BlackAJDevLogo.png" alt="coding-picture">
+                <img src="Black-Red-AJDevLogo.png" alt="coding-picture">
             </div>
         </div>
     </section>
