--- a/success.html
+++ b/success.html
@@ -18,13 +18,13 @@
 
 <body>
 
-    <section>
+    <section class="success-section">
         <div class="project-container">
             <h2>Contact Me ()</h2>
-            <p class="success-text">Success! We will get back with you very shortly. <br> Thank you!</p>
+            <p class="success-text">Thank you! I will get back with you very shortly. <br> Thank you!</p>
         </div>
         <div class="success-logo">
-            <img src="BlackAJDevLogo.png" alt="Portfolio Logo">
+            <img src="Black-Red-AJDevLogo.png" alt="Portfolio Logo">
         </div>
     </section>
 
