Finalized layouts of Portfolio

--- a/index.html
+++ b/index.html
@@ -129,15 +129,15 @@
             </div>
             <div class="projects-container">
                 <div class="project-card project1">
-                    <a href="project1.html" target="_blank">Click Here</a>
+                    <a href="https://alanjohnsondev.github.io/Nine30-Consulting/" target="_blank">Click Here</a>
                     <img src="Project1-picture.PNG" alt="Morning Coffee">
-                    <h3>Morning Coffee (SaaS)</h3>
-                    <p>A Software as a Service website <br> mock up, that is mobile / tablet <br> responsive. 
-                    Used mostly HTML5, <br> and CSS3 principles for this project.</p>
+                    <h3>Nine30 Consulting</h3>
+                    <p>Solely custom coded website, created for Nine 30 Consulting. <br> A government subcontractor company
+                    based around managing <br> financial projects for the Navy.</p>
                 </div>
 
                 <div class="project-card project2">
-                    <a href="project2.html" target="_blank">Click Here</a>
+                    <a href="https://alanjohnsondev.github.io/Development-Path/" target="_blank">Click Here</a>
                     <img src="Project2-picture.png" alt="Development Path">
                     <h3>Development Path</h3>
                     <p>A Technology Blogging Website, <br> that is mobile responsive, allowing users 
@@ -154,7 +154,7 @@
             </div>
             <div class="projects-container">
                 <div class="project-card project3">
-                    <a href="project3.html" target="_blank">Click Here</a>
+                    <a href="https://alanjohnsondev.github.io/LAFitnessEvaluation/" target="_blank">Click Here</a>
                     <img src="Project3-picture.png" alt="LA Fitness Evaluation Form">
                     <h3>LA Fitness Evaluation</h3>
                     <p>A Fitness Evaluation Form, used in my <br> previous job as an Assistant Personal Training Director. <br>
@@ -162,10 +162,11 @@
                 </div>
 
                 <div class="project-card project4">
-                    <a href="project4.html" target="_blank">Click Here</a>
-                    <img src="Project4-picture.png" alt="Development Path">
-                    <h3>Orioles Blog Website</h3>
-                    <p>Mock up Orioles Blog Website, for a client prospect, <br> made using HTML, CSS ( w/ Parallax Effect).</p>
+                    <a href="https://alanjohnsondev.github.io/MorningCoffee/" target="_blank">Click Here</a>
+                    <img src="Project4-picture.PNG" alt="Morning Coffee">
+                    <h3>Morning Coffee (SaaS)</h3>
+                    <p>A Software as a Service website <br> mock up, that is mobile / tablet <br> responsive. 
+                    Used mostly HTML5, <br> and CSS3 principles for this project.</p>
                 </div>
             </div>
         </div>
