Added new UI Designs

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <div class="navbar">
                 <a href="#About">About</a>
                 <a href="#Projects">Projects</a>
+                <a href="#UI">UI Designs</a>
                 <button><a href="#Contact-me">Contact Me</a></button>
             </div>
 
@@ -35,7 +36,7 @@
             <div class="title-section">
                 <div class="title-container">
                     <div>
-                        <h1 class="title">Frontend <br> Developer.</h1>
+                        <h1 class="title">Front End<br> Developer.</h1>
                         <p class="title-paragraph">Passionate about creating User Interfaces <br> 
                             on websites and applications.</p>
                     </div>
@@ -63,9 +64,9 @@
             </div>
             <div class="about-content">
                 <p class="about-paragraph">
-                    Hello! My name is Alan Johnson, and I'm a <strong>Software Developer</strong> based 
+                    Hello! My name is Alan Johnson, and I'm a <strong>Web Developer</strong> based 
                     in Maryland, US. <br> I love web design, in my spare time if I am 
-                    not hanging out with my wife and pup, <br> I am coding websites.
+                    not hanging out with my wife and dog, <br> I am coding websites.
                 </p> <br>
                 <p class="about-paragraph">
                     I have worked as a Junior Software Developer at a government contracting company <br>
@@ -74,7 +75,7 @@
                     their website, making it more User Friendly <br> and mobile responsive.
                 </p> <br>
                 <p class="about-paragraph">
-                    I am in the process of a <strong>Full-Stack Developer Boot Camp</strong> that has <br> helped me obtain
+                    I have completed a <strong>Full-Stack Developer Boot Camp</strong> that has <br> helped me obtain
                     the skills below, and a few I have learned along <br> the way in professional experience:
                 </p>
 
@@ -109,6 +110,15 @@
                             </ul>
                         </div>
 
+                        <div class="skills4">
+                            <ul>
+                                <li>Figma</li>
+                                <li>UI Design</li>
+                                <li>Canva</li>
+                                <li>AdobeXD</li>
+                            </ul>
+                        </div>
+
                     </div>
 
                     <div class="coding-picture">
@@ -129,7 +139,7 @@
             </div>
             <div class="projects-container">
                 <div class="project-card project1">
-                    <a href="https://alanjohnsondev.github.io/Nine30-Consulting/" target="_blank">Click Here</a>
+                    <a href="https://alanjohnsondev.github.io/Nine30-Consulting/" target="_blank">View More</a>
                     <img src="Project1-picture.PNG" alt="Morning Coffee">
                     <h3>Nine30 Consulting</h3>
                     <p>Solely custom coded website, created for Nine 30 Consulting. <br> A government subcontractor company
@@ -137,7 +147,7 @@
                 </div>
 
                 <div class="project-card project2">
-                    <a href="https://alanjohnsondev.github.io/Development-Path/" target="_blank">Click Here</a>
+                    <a href="https://alanjohnsondev.github.io/Development-Path/" target="_blank">View More</a>
                     <img src="Project2-picture.png" alt="Development Path">
                     <h3>Development Path</h3>
                     <p>A Technology Blogging Website, <br> that is mobile responsive, allowing users 
@@ -154,7 +164,7 @@
             </div>
             <div class="projects-container">
                 <div class="project-card project3">
-                    <a href="https://alanjohnsondev.github.io/LAFitnessEvaluation/" target="_blank">Click Here</a>
+                    <a href="https://alanjohnsondev.github.io/LAFitnessEvaluation/" target="_blank">View More</a>
                     <img src="Project3-picture.png" alt="LA Fitness Evaluation Form">
                     <h3>LA Fitness Evaluation</h3>
                     <p>A Fitness Evaluation Form, used in my <br> previous job as an Assistant Personal Training Director. <br>
@@ -162,7 +172,7 @@
                 </div>
 
                 <div class="project-card project4">
-                    <a href="https://alanjohnsondev.github.io/MorningCoffee/" target="_blank">Click Here</a>
+                    <a href="https://alanjohnsondev.github.io/MorningCoffee/" target="_blank">View More</a>
                     <img src="Project4-picture.PNG" alt="Morning Coffee">
                     <h3>Morning Coffee (SaaS)</h3>
                     <p>A Software as a Service website <br> mock up, that is mobile / tablet <br> responsive. 
@@ -176,14 +186,14 @@
     <!-- UI Designs Section -->
 
     <section>
-        <div class="ui-section">
+        <div id="UI" class="ui-section">
             <div class="ui-title">
                 <h2>UI Designs</h2>
                 <p>(using Figma)</p>
             </div>
             <div class="ui-container">
                 <div class="ui-design1">
-                    <a href="uidesign1.html" target="_blank">Click Here</a>
+                    <a href="uidesign1.html" target="_blank">View More</a>
                     <img src="CallofDutyUI_ModernWarfare.png" alt="Call of Duty Menu Display">
                     <h3>Call of Duty: Modern Warfare Menu Display</h3>
                     <p>Call of Duty: Modern Warfare UI Menu Design made <br> from inspiration of the game itself.</p>
@@ -197,18 +207,41 @@
             <div class="ui-title">
                 <h2>UI Designs</h2>
                 <p>(using Figma)</p>
-                <h3>Call of Duty NEW Feature</h3>
-                <h4>Entire Design within the next 2 pages</h4>
             </div>
             <div class="ui-container2">
                 <div class="ui-design2">
-                    <a href="uidesign2.html" target="_blank">Click Here</a>
+                    <a href="uidesign8.html" target="_blank">View More</a>
+                    <img src="Design_SpaceGame1.PNG" alt="WireFrame iPhone 14 icons">
+                    <h3>Space Game UI/UX Design</h3>
+                    <p>Concept of a Space Game UI/UX Design for the menus.</p>
+                </div>
+                <div class="ui-design2">
+                    <a href="uidesign9.html" target="_blank">View More</a>
+                    <img src="Design_iPhone14Icons.PNG" alt="Design iPhone 14 icons">
+                    <h3>WireFrame and Design for iPhone 14 Pro Icons</h3>
+                    <p>WireFrame and Design to help bring iPhone icons to life.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div class="ui-section">
+            <div class="ui-title">
+                <h2>UI Designs</h2>
+                <p>(using Figma)</p>
+                <h3>Call of Duty NEW Feature</h3>
+                <h4>Entire Design within the next 3 pages</h4>
+            </div>
+            <div class="ui-container2">
+                <div class="ui-design2">
+                    <a href="uidesign2.html" target="_blank">View More</a>
                     <img src="Wireframe_ModernWarfare_CompareWeaponsUI.png" alt="WireFrame Compare Weapons">
                     <h3>WireFrame for Comparing Weapons</h3>
                     <p>Concept to help compare weapons inside of the <br> gunsmith for Call of Duty: Modern Warfare</p>
                 </div>
                 <div class="ui-design2">
-                    <a href="uidesign3.html" target="_blank">Click Here</a>
+                    <a href="uidesign3.html" target="_blank">View More</a>
                     <img src="Design_ModernWarfare_CompareWeaponsUI.png" alt="Design Compare Weapons">
                     <h3>Design for Comparing Weapons</h3>
                     <p>Completed Design for comparing weapons inside of the <br> gunsmith for Call of Duty: Modern Warfare</p>
@@ -225,13 +258,13 @@
             </div>
             <div class="ui-container2">
                 <div class="ui-design2">
-                    <a href="uidesign4.html" target="_blank">Click Here</a>
+                    <a href="uidesign4.html" target="_blank">View More</a>
                     <img src="Wireframe_ModernWarfare_IndividualWeaponUI.png" alt="WireFrame Individual Weapon">
                     <h3>WireFrame for Individual Weapon</h3>
                     <p>Concept to make the statistics for an Individual Weapon <br> inside of the gunsmith.</p>
                 </div>
                 <div class="ui-design2">
-                    <a href="uidesign5.html" target="_blank">Click Here</a>
+                    <a href="uidesign5.html" target="_blank">View More</a>
                     <img src="Design_ModernWarfare_IndividualWeaponUI.png" alt="Design Individual Weapon">
                     <h3>Design for Individual Weapon</h3>
                     <p>Completed Design to make the statistics for an <br> Individual Weapon inside of the gunsmith.</p>
@@ -248,13 +281,13 @@
             </div>
             <div class="ui-container2">
                 <div class="ui-design2">
-                    <a href="uidesign6.html" target="_blank">Click Here</a>
+                    <a href="uidesign6.html" target="_blank">View More</a>
                     <img src="Wireframe_ModernWarfare_FinalCompareUI.png" alt="WireFrame Final Compare">
                     <h3>WireFrame for Final Comparison of Weapons</h3>
                     <p>Concept to compare up to 3 weapons inside of the gunsmith.</p>
                 </div>
                 <div class="ui-design2">
-                    <a href="uidesign7.html" target="_blank">Click Here</a>
+                    <a href="uidesign7.html" target="_blank">View More</a>
                     <img src="Design_ModernWarfare_FinalCompareUI.png" alt="Design Final Compare">
                     <h3>Design for Final Comparison of Weapons</h3>
                     <p>Completed Design to compare up to 3 weapons inside <br> of the gunsmith.</p>
