Fixed project picture

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             <div class="projects-container">
                 <div class="project-card project1">
                     <a href="https://alanjohnsondev.github.io/Nine30-Consulting/" target="_blank">View More</a>
-                    <img src="Project1-picture.PNG" alt="Morning Coffee">
+                    <img src="Project1-picture.png" alt="Nine 30 Consulting">
                     <h3>Nine30 Consulting</h3>
                     <p>Solely custom coded website, created for Nine 30 Consulting. <br> A government subcontractor company
                     based around managing <br> financial projects for the Navy.</p>
